  - Added dependency to HTML::Entities::Numbered
  - Added more examples to the "escape sequence" demo page
  - Fixed font so proper sizes and family were honored, which also fixed
    the H? tags font size.
  - Fixed font sizes that were off by 1
  - Fixed more spacing issues.
  - Added extension so you can specify a font in a point size.

0.12 Feb 25, 2016
  - Add more dependencies to get CPANTS to pass.

0.11 Feb 23, 2016
  - Add dependency on HTML::TokeParser.

0.10 Sep 18, 2015
  - Add dependency on Tk::Derived.

0.09 2013-11-11
  - Reformatted as per CPAN::Changes::Spec -neilbowers

0.08 2013-11-01
  - Use hex() instead of eval() to convert hex strings into numbers.
  - Set default values for body colors.
  - Stop demo.pl from being installed; rename it to eg/example.

0.06 2008-07-14
  - The module uses HTML::TokeParser now and does "real" HTML parsing.
  - Badly broke backwards compatibility.

0.05 2007-07-11
  - Added support for "tag permissions", so that you can allow/deny specific
    tags from being rendered (i.e. say you're making a chat client which uses
    HTML and you don't want people inserting images into their messages,
    or style sheets, etc)
  - Added the tags <address>, <var>, <cite>, and <def>.
  - Added the <hr> tag.
  - Added two "default images" that are displayed when an <img> tag tries to
    show an image that couldn't be found, or was found but is a file type
    that isn't supported (e.g. <img src="index.html"> would show
    an "invalid image" icon).
  - Bug fix: every opened tag that modifies your style will now copy
    all the other stacks. As a result, opening <font back="yellow">,
    then <font color="red">, and then closing the red font,
    will still apply the yellow background to the following text.
    The same is true for every tag.
  - Added some support for Cascading StyleSheets.
  - Added some actual use for the "active link color": it's used as the